<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    tools:context=".ControlActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="400dp"
        android:layout_height="90dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/osaka_re"
        android:textColor="#494949"
        android:gravity="center"
        android:text="@string/controls"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/cam_switch"
        android:layout_width="190dp"
        android:layout_height="85dp"
        android:layout_marginTop="60dp"
        android:text="@string/camera"
        android:textSize="30sp"
        android:fontFamily="@font/cross"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <Switch
        android:id="@+id/light_switch"
        android:layout_width="190dp"
        android:layout_height="85dp"
        android:layout_marginTop="32dp"
        android:text="@string/lights"
        android:textSize="30sp"
        android:fontFamily="@font/cross"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cam_switch" />

    <Switch
        android:id="@+id/pump_switch"
        android:layout_width="190dp"
        android:layout_height="85dp"
        android:layout_marginTop="32dp"
        android:text="@string/pump"
        android:textSize="30sp"
        android:fontFamily="@font/cross"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/light_switch" />

    <Switch
        android:id="@+id/fan_switch"
        android:layout_width="190dp"
        android:layout_height="85dp"
        android:layout_marginTop="32dp"
        android:text="@string/fan"
        android:textSize="30sp"
        android:fontFamily="@font/cross"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pump_switch"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>