<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    tools:context=".GraphActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="400dp"
        android:layout_height="110dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/osaka_re"
        android:gravity="center"
        android:text="@string/graph"
        android:textSize="90sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="85dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_corners"
        android:backgroundTint="#757575"
        android:fontFamily="@font/cross"
        android:gravity="center"
        android:onClick="goto_temp"
        android:text="@string/temperature"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_spinner" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="85dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_corners"
        android:backgroundTint="#757575"
        android:fontFamily="@font/cross"
        android:onClick="goto_ph"
        android:text="@string/ph"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="85dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_corners"
        android:backgroundTint="#757575"
        android:fontFamily="@font/cross"
        android:onClick="goto_humidity"
        android:textSize="20sp"
        android:text="@string/humidity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/date_spinner"
        android:layout_width="215dp"
        android:layout_height="68dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#00BCD4"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />
</androidx.constraintlayout.widget.ConstraintLayout>