<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/data"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/temperature"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/humidity"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temp_display"
        android:layout_width="200dp"
        android:layout_height="111dp"
        android:background="#000000"
        android:gravity="center"
        android:textColor="#FF0000"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/humidity_display"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="60dp"
        android:text="@string/humidity"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/humidity_display"
        android:layout_width="200sp"
        android:layout_height="111sp"
        android:background="#000000"
        android:gravity="center"
        android:textColor="#FF0000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humidity" />

    <TextView
        android:id="@+id/ph"
        android:layout_width="29dp"
        android:layout_height="28dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="48dp"
        android:text="@string/ph"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/water_lvl"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp_display" />

    <TextView
        android:id="@+id/water_lvl"
        android:layout_width="108dp"
        android:layout_height="28dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="48dp"
        android:text="@string/water_level"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humidity_display" />

    <TextView
        android:id="@+id/ph_display"
        android:layout_width="200dp"
        android:layout_height="111dp"
        android:background="#000000"
        android:gravity="center"
        android:textColor="#FF0000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ph"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/water_lvl_display"
        android:layout_width="200dp"
        android:layout_height="111dp"
        android:background="#000000"
        android:gravity="center"
        android:textColor="#4CAF50"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ph_display"
        app:layout_constraintTop_toBottomOf="@+id/water_lvl"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>